--- a/SemesterProjekt3Client/SemesterProjekt3Client.csproj
+++ b/SemesterProjekt3Client/SemesterProjekt3Client.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="GUI\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
